@@ -1,14 +1,14 @@
 #!/bin/bash
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage1/Attic/stage1-preclean-chroot.sh,v 1.4 2005/04/14 14:59:48 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage1/Attic/stage1-preclean-chroot.sh,v 1.5 2005/04/29 21:31:32 rocket Exp $
 
 . /tmp/chroot-functions.sh
 
 # now, some finishing touches to initialize gcc-config....
 unset ROOT
 
-setup_gcc
+#setup_gcc
 		
 # stage1 is not going to have anything in zoneinfo, so save our Factory timezone
 if [ -d /usr/share/zoneinfo ] ; then
